tests/errors/invalid-escape.ssv
name:string
alice
bo\zb
